@@ -1,0 +1,11 @@
+From: donut@charon
+Newsgroups: test
+Subject: par 2nd test 2of7 - p2.p01 (0/1)
+User-Agent: Newspost/2.0 (http://newspost.unixcab.org/)
+Date: Sat, 04 Jan 2003 02:45:29 GMT
+Message-ID: <0.1041648329.0004@dumbnntpd>
+
+here is a zero file.
+blah blah blah.
+whee.
+
